Copy Dialog as Standalone

--- a/src/app/description/description.component.html
+++ b/src/app/description/description.component.html
@@ -4,8 +4,8 @@
     <div fxLayoutAlign="space-between start">
       <textarea matInput
                 placeholder="Description"
-                matTextareaAutosize
-                matAutosizeMinRows = "2"
+                cdkTextareaAutosize=""
+                cdkAutosizeMinRows = "2"
                 [disabled]="disabled"
                 [ngModel]="description"
                 (ngModelChange)="setDescription($event)"
