--- a/src/app/visualization/visualization.component.html
+++ b/src/app/visualization/visualization.component.html
@@ -13,11 +13,11 @@
           <input matInput [(ngModel)]="authKey" placeholder="Authorization Key">
         </mat-form-field>
 
-        <button mat-raised-button (click)="connect()" *ngIf="connectionStatus === 'Disconnected'">
+        <button mat-raised-button (click)="connect()" *ngIf="connectionStatus === 'disconnected'">
           Connect
         </button>
 
-        <button mat-raised-button (click)="disconnect()" *ngIf="connectionStatus !== 'Disconnected'">
+        <button mat-raised-button (click)="disconnect()" *ngIf="connectionStatus !== 'disconnected'">
           Disconnect
         </button>
       </div>
@@ -31,8 +31,7 @@
 
       <a class="follow-button" *ngIf="following" mat-icon-button (click)="follow(null)" title="Stop following">Stop following</a>
 
-      <div class="controls" *ngIf="(ws.status$ | async) === 'Ready'">
-        <a mat-icon-button (click)="toggleLights()" title="Toggle lights"><mat-icon>highlight</mat-icon></a>
+      <div class="controls" *ngIf="sceneMgr">
         <a mat-icon-button (click)="snapshot()" title="Take a snapshot"><mat-icon>camera_alt</mat-icon></a>
         <a mat-icon-button (click)="resetView()" title="Reset view"><mat-icon>home</mat-icon></a>
         <a mat-icon-button (click)="toggleFullscreen()" title="Full screen"><mat-icon>fullscreen</mat-icon></a>
@@ -40,7 +39,7 @@
 
       <div class="inner" fxLayoutAlign="center center">
         <div fxLayout="row" fxLayoutAlign="center center">
-          <div id="scene" (window:resize)="resize()"></div>
+          <div id="gz-scene" (window:resize)="resize()"></div>
           <div fxLayout="column" class="gz3d-side-panel" *ngIf="models.length > 0">
             <h2>Entities</h2>
             <mat-list class="entity-list">
