Disable thumbnail generator because the THREE dependency is broken with the move to gzweb2
Signed-off-by: Nate Koenig <natekoenig@gmail.com>

--- a/src/app/model/edit/edit-model.component.html
+++ b/src/app/model/edit/edit-model.component.html
@@ -51,9 +51,11 @@
                 fxFill>
       </gz-metadata>
 
+      <!-- nkoenig: Disabling until we fix the THREE dependency
       <h2>Thumbnails</h2>
 
       <gz-thumbnail-generator [resource]="model"></gz-thumbnail-generator>
+      -->
 
       <h2>Replace files</h2>
 
