--- a/src/app/world/edit/edit-world.component.html
+++ b/src/app/world/edit/edit-world.component.html
@@ -45,9 +45,11 @@
                     fxFill>
       </gz-metadata>
 
+      <!-- nkoenig: Disabling until we fix THREE dependency
       <h2>Thumbnails</h2>
 
       <gz-thumbnail-generator [resource]="world"></gz-thumbnail-generator>
+      -->
 
       <h2>Replace files</h2>
 
